Move Intercom widget to avoid covering FAB

--- a/lineman/app/css/1_utilities.scss
+++ b/lineman/app/css/1_utilities.scss
@@ -262,3 +262,7 @@ textarea.form-control {
     opacity: 0;
   }
 }
+
+div#intercom-container div#intercom-launcher {
+    right: 85px;
+}
